# Quiz-Management-FastAPI

./: README.md  pyproject.toml  requirements.txt
app/: auth.py  config.py  database.py  main.py  utils.py
app/models/: quiz.py  user.py
app/routers/: admin_nonui_quiz.py  admin_quizzes.py  admin_users.py  quiz_retrieval.py  ui_login.py  user_management.py  user_quizzes.py
app/schemas/: quiz.py  user.py
app/static/: styles.css
app/templates/: login.html
app/templates/admin/: base.html  index.html
app/templates/admin/quizzes/: attempts.html  delete.html  edit.html  list.html
app/templates/admin/users/: create.html  delete.html  list.html
app/templates/users/: attempt_quiz.html  base.html  index.html  result.html
quiz_test_json/: test_1.json  test_2.json  test_3.json
